# adaptive-playlist-agent

./: .gitignore  README.md  claude.md  docker-compose.yml
Spotify API Requests/: Search_API_Tracks.md  Search_API_Use_Somebody_Example.md
Spotify API Response Templates/: Spotify_Search_API_Example_Response.json  Use Somebody Search Response
backend/: create_tables.py  database.py  genres.py  models.py
data-ingestion-pipeline/: corpus_preview.txt  fetch_spotify_artists.py  pyproject.toml  rate_limiter.py  readme.md  requirements.txt  semantic-data-extract-example.py  small_corpus_preview.txt  test_small_semantic_data_extract.py  wikipedia_semantic_data_extract.py
data-ingestion-pipeline/adaptive_playlist_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data-ingestion-pipeline/constants/: spotify_artist_names.py  wikipedia_api_settings.py  wikipedia_page_titles_for_artists.py
data-ingestion-pipeline/corpus_previews/: old_approach_test_blink-182.txt  small_test_blink-182.txt
data-ingestion-pipeline/corpus_previews/small_test_data_previews/: small_corpus_preview_20260614_123248.txt  small_corpus_preview_20260621_104346.txt
data-ingestion-pipeline/data-examples/: blink-182-html-extract-unlabelled-intro.html  blink-182-wikipedia-article-unlabelled-intro-raw-text.txt  html-wikipedia-extract-unlabelled-intro-plus-second-section-for-blink-182.html
data-ingestion-pipeline/logs_copies_from_testing/: logs-june-21-time-3-52.txt  logs-june-21.txt
